added description of incident with poorly written cursive lowercase l

--- a/main.tex
+++ b/main.tex
@@ -96,13 +96,22 @@ The CHoiCe server uses the same neural network architecture as the EMNIST server
 
 The recognize\_cursive\_line tool has a significant limitation due to the nature of cursive handwriting. The line segmentation algorithm relies on identifying gaps between characters by scanning for columns of pixels that contain no white pixels. This works for print handwriting where characters are naturally separated, but cursive handwriting connects letters together in a continuous flow. Because of this, the segmentation algorithm cannot properly separate conjoined cursive characters. It will often interpret an entire word as a single character or incorrectly split characters at arbitrary points where strokes happen to thin. This makes the recognize\_cursive\_line tool only functional for cursive text where characters have already been separated, which is not particularly useful for most real-world cursive handwriting recognition scenarios. The tool does still allow multiple pre-separated cursive characters to be processed at once if circumstances requiring such arise, but this is a narrow use case. Developing a proper cursive segmentation algorithm proved extremely difficult. Cursive connections vary significantly between writers and even between different letter combinations within the same writer's handwriting. Methods such as analyzing stroke direction changes, identifying local minima in character width, and using machine learning for segmentation were considered but not implemented due to the complexity involved.
 
-To interact with this system, a basic Tkinter Graphical User Interface was built. The basic GUI contains two text boxes, one for the user to input the meta data for the image that they are adding and another for the LLM to return its transcription of the image. On the right side, there is a large drop box for images. It does not show the image input, but it does receive the files using another package tkinkterdnd2 which allows users to drag and drop images. The system stores the data input by the user and feeds it to the LLM's prompt allowing for the function calls necessary to be determined by the system.
+To interact with this system, Anthropic's Claude Opus 4.5 model serves as the MCP client. Claude Opus 4.5 is a large language model capable of making tool calls through the Model Context Protocol. When given an image path and information about the handwriting style, Claude determines which MCP server tool is most appropriate to use based on the tool descriptions provided by each server. Claude then sends a tool call in the form of a JSON request containing the tool name and image path parameter. The MCP server processes the image through the appropriate computer vision system and returns the recognized text to Claude, which then presents the results to the user. This approach allows Claude to intelligently select between the EMNIST server for modern print handwriting and the CHoiCe server for cursive or historical handwriting styles based on context provided by the user.
 
 \section{Results}
 
 For the results section, a graph of the loss of each computer vision system will be shown as the project progressed. This will be shown for earlier renditions of the system as well as the final chosen system. It will be used to demonstrate the accuracy of the system. This has not been done yet because it is believed that a lower loss from the system will still be attained.
 
-Examples of lines of text and the output on the user interface will also be shown. This unfortunately does not exist yet.
+Examples of lines of text and the output from Claude's tool calls will also be shown. This unfortunately does not exist yet.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.3\textwidth]{ProjectCode/imgs/l.jpg}
+    \caption{A cursive lowercase "l" used to test both computer vision systems.}
+    \label{fig:cursive_l}
+\end{figure}
+
+When both MCP servers were given an image of a cursive lowercase "l" shown in Figure \ref{fig:cursive_l}, the results demonstrated the challenges of handwriting recognition. The EMNIST server predicted an uppercase "I" with 29.4\% confidence. The CHoiCe server predicted a "D" with 96.77\% confidence. The intended character was a lowercase cursive "l" written in a round cursive style. This particular "l" was fundamentally flawed as input because the round cursive shape became distorted during image processing, making it appear more circular than the typical pipe-shaped lowercase "l" that OCR systems expect. The EMNIST server's low confidence guess of uppercase "I" shows the model recognized that the input did not match any character well. The CHoiCe server's high confidence prediction of "D" represents a false positive, where the model is very certain about an incorrect answer. This is a known issue with neural networks trained on small datasets where the model can become overconfident in its predictions.
 
 As was previously shown in the example with figure1, the handwritten name input into the system, errors in transcription are frequent and often very obvious. Additionally, spaces may not be detected by the system. Among x attempts in running our convolutional neural network Model3 on Figure1, an average of y characters were seen incorrectly transcribed. This reflects the system’s overall accuracy but also shows that the system is far from perfect. Generally
 
