extensions made and CHoiceDataset cited with annotation

--- a/main.tex
+++ b/main.tex
@@ -33,13 +33,16 @@ There are several different frequently implemented datasets for handwritten text
 
 The preparation of images for computer vision is a complex process involving simplifying images and often storing them on a gray scale. As was seen with the EMNIST images, they were represented in gray scale with gray scale pixels. Additionally, a gaussian blur smoothed the image, ROI Extraction Centered Frame, and resizing and resampling were applied to ensure that the images were the correct consistent size and had the proper shading\cite{7966217}. The final result was images with white text with pixels blurred into a black background along the edges of the letters. In implementations of interactive image measurement software using Tkinter and PIL libraries from Python, researchers showed how tools may be used to perform the individual tasks implemented for the EMNIST database\cite{10.1145/3727648.3727740}. They explain that the Python PIL libraries may be used to perform image processing such as grayscale conversion, Gaussian blur, image sharpening, binarization and more\cite{10.1145/3727648.3727740}. The PIL package in Python could effectively be used for the preparation of images for EMNIST computer vision systems. The same methods could also be easily implemented to feed images into the output computer vision systems during their implementation.
 \subsection*{Model Context Protocol}
-To connect AI models with the tools that they require to function optimally and perform all tasks that may be required of them, there are several different popular methods. One recently released was the Model Context Protocol (MCP) and according to its own website, this protocol is a standardized way to connect AI applications to other systems\cite{modelContextProtocol/getting-started/intro}. This is primarily described in the context of agentic AI applications. The Model Context Protocol simplifies the integration of algorithm models, platform tools, and data sources to an AI agents\cite{10.1145/3745238.3745531}. Using the model context protocol, AI systems would be able to access and use the computer vision systems that are created using different datasets. It would become the AI’s task to select the appropriate computer vision system to analyze an image that is input into it.   
+To connect AI models with the tools that they require to function optimally and perform all tasks that may be required of them, there are several different popular methods. One recently released was the Model Context Protocol (MCP) and according to its own website, this protocol is a standardized way to connect AI applications to other systems\cite{modelContextProtocol/getting-started/intro}. This is primarily described in the context of agentic AI applications. The Model Context Protocol simplifies the integration of algorithm models, platform tools, and data sources to an AI agents\cite{10.1145/3745238.3745531}. Using the model context protocol, AI systems would be able to access and use the computer vision systems that are created using different datasets. It would become the AI's task to select the appropriate computer vision system to analyze an image that is input into it.
+
+\subsection*{Claude}
+Claude is a large language model developed by Anthropic. Claude Opus 4.5, released in 2025, is capable of making tool calls through the Model Context Protocol\cite{ClaudeOpus4_5}. When configured as an MCP client, Claude can receive tool descriptions from connected MCP servers and determine which tool is most appropriate for a given task based on natural language context. This makes Claude suitable for serving as the intelligent decision-making component in systems that require selecting between multiple specialized tools.   
 
 
 
 
 \section{Methodology}
-While seeking to implement the necessary computer vision systems to complete this project, the computer vision systems frequently used by other researchers in the field were first explored. It was discovered that among them one of the most popular was the MNIST\cite{10.1145/3727648.3727679}. From there, further research soon revealed the existence of the EMNIST which included the full set of characters required for this project. Thus, the dataset's parameters were used to create a convolutional neural network (CNN), a multi-layer architecture designed for image classification tasks. To perform the machine learning tasks involved, the Python PyTorch library was utilized. The model begins with an input of a single-image, 28 by 28 pixels. From here, kerneling with 10 filters with a 5 by 5 size and stride of 1 are applied in the first convolutional layer. This operation extracts 10 feature maps with emphasized details of the image. From here, a pooling layer halves the dimensions of each feature map reducing them to 12 by 12 squares. Next, another convolutional layer expands the feature map depth to 20 using the same kernel size and stride. From here, a second pooling layer simplifies the feature map to dimensions of 4 by 4 for each map. Finally, three linear fully connected layers map the 320 inputs to 104 neurons, then reduce that to 52, and finally bring that down to 26, fully aligned with the number of potential characters in the dataset. This method was effective. Through three separate attempts at processing the image, accuracies between 84\% and 86\% were attained through several attempts at running this code. This shows that the system was successfully recognizing many images, but an accuracy of 86 percent means that many words would still be very misspelled. For example, by inputting the image of the letters in the author's name, Figure:1, the following characters were received as the output: "ailksfike" This is very similar to the intended result but still imperfect. Because the intention of this project is to accurately transcribe text, the program should be expected to correctly identify all characters. The system was rewritten a few times.
+While seeking to implement the necessary computer vision systems to complete this project, the computer vision systems frequently used by other researchers in the field were first explored. It was discovered that among them one of the most popular was the MNIST\cite{10.1145/3727648.3727679}. From there, further research soon revealed the existence of the EMNIST which included the full set of characters required for this project. Thus, the dataset's parameters were used to create a convolutional neural network (CNN), a multi-layer architecture designed for image classification tasks. The Python PyTorch library was used for all machine learning tasks. The model begins with an input of a single 28 by 28 pixel image. A kernel, which is a small sliding window that scans across the image to detect patterns, is applied with 10 filters of 5 by 5 size and a stride of 1, meaning the window moves one pixel at a time. This operation extracts 10 feature maps, which are processed versions of the image that highlight specific patterns like edges or curves. A pooling layer then halves the dimensions of each feature map to 12 by 12 by taking the maximum value in each region. Next, another convolutional layer expands the feature map depth to 20 using the same kernel size and stride. From here, a second pooling layer simplifies the feature map to dimensions of 4 by 4 for each map. Finally, three linear fully connected layers map the 320 inputs to 104 neurons, then reduce that to 52, and finally bring that down to 26, fully aligned with the number of potential characters in the dataset. This method was effective, achieving accuracies between 84\% and 86\% across several attempts. However, 86\% accuracy means many words would still be misspelled. For example, inputting the author's name (Figure 1) produced "ailksfike" instead of "milesfike." Because the goal is accurate transcription, the system was rewritten several times to improve results.
 
     \begin{figure}[htbp]
         \centering
@@ -48,27 +51,27 @@ While seeking to implement the necessary computer vision systems to complete thi
         \label{fig:1}
     \end{figure}
 
-Next, the program was rewritten to utilize more convolutional frames. In the second attempt, a convolutional layer with 32 output channels was used to iterate over the input layer and return 32 feature maps. From here the same pooling layer was used to halve the length and width of each individual feature map produced by the convolutional layer. The second convolutional layer output 64 different channels, and the following pooling layer compressed them. From here, 3 fully connected layers took the 1024 outputs and connected them to 256 neurons, then 256 neurons are connected to 104, and finally the 104 neurons are connected to the 26 aligned to each image. Due to the more extensive analysis of each input image by the increased number of feature maps detecting more details, this system, which will henceforth be referred to as Model2, had consistently higher accuracy. Model2 achieved accuracy of up to 89\% and no accuracy was recorded below 88% in 4 separate trainings of the system. Outputs for this system from figure1 include, "ailesfike", "nilrsfike", and "hilesfihe."
+Next, the program was rewritten to utilize more convolutional frames. In the second attempt, a convolutional layer with 32 output channels produced 32 feature maps. The same pooling layer halved the dimensions of each feature map. The second convolutional layer output 64 channels, and the following pooling layer compressed them. From here, 3 fully connected layers took the 1024 outputs and connected them to 256 neurons, then to 104, and finally to the 26 output classes. This system, referred to as Model2, achieved accuracy of up to 89\% with no accuracy below 88\% in 4 separate trainings. Outputs from Figure 1 include "ailesfike", "nilrsfike", and "hilesfihe."
 
-From here, another system was created starting by filtering over the input layer for 100 feature maps. This used the same pooling layers and eventually attained 200 4 by 4 feature maps. The 3200 different outputs were connected to 208 neurons, then they were connected to 104, and finally, they were connected to just 26 by the fully connected layers. This system, henceforth referred to as Model3, usually resulted in a final accuracy of 90\% through every attempt at running it. Example outputs from the system using figure1 include, “rilesfike.” With only one letter off, it is similar to the outputs of the Model2. The lack of significant difference and significantly longer run time for this application indicates that the number of convolutional layers in Model 2 may have been enough.
+From here, another system was created starting with 100 feature maps. This used the same pooling layers and eventually attained 200 4 by 4 feature maps. The 3200 outputs were connected through fully connected layers to 208 neurons, then 104, and finally 26. This system, referred to as Model3, achieved 90\% accuracy consistently. Example output from Figure 1 includes "rilesfike." With only one letter off, Model3 performs similarly to Model2 but with significantly longer run time, indicating that Model2's architecture may have been sufficient.
 
-A fourth and final model was created using the same convolutional and pooling layers as Model3, but with different fully connected layers. This model used 6 separate fully connected layers to link the neurons to the feature map. The first linked the 3200 outputs to 1600 neurons, then 1600 to 800, then 800 to 410, then 410 to 208, then 208 to 104, and finally 104 to 26. This resulted in an accuracy of 89\% or 90\%. This shows that the fundamental issue is likely the amount of training data input into the system. Because Model3 was the optimal system, it was the system that was exported to the MCP server.
+A fourth model was created using the same convolutional and pooling layers as Model3 but with 6 fully connected layers: 3200 to 1600, then 800, 410, 208, 104, and finally 26. This resulted in 89\% or 90\% accuracy. The lack of improvement shows that the fundamental issue is likely the amount of training data, not the network architecture. Because Model3 was optimal, it was exported to the MCP server.
 
-To account for a wider range of potential characters including uppercase letters, lowercase letters, and digits, a separate computer vision system was developed using the EMNIST ByClass dataset. This dataset contains 62 distinct character classes rather than the 26 used in the previous models. The architecture of this system follows a similar structure to Model2 but with adjusted output dimensions. The first convolutional layer applies 32 filters with a 5 by 5 kernel and stride of 1 to the 28 by 28 pixel input, producing feature maps of dimension $(28-5)+1=24$, which are then reduced to 12 by 12 through max pooling with a 2 by 2 kernel. From here, a second convolutional layer expands to 64 output channels using the same kernel size, resulting in feature maps of dimension $(12-5)+1=8$, which are further compressed to 4 by 4 through another pooling layer. The 1024 outputs ($64 \times 4 \times 4$) are then passed through three fully connected layers: the first connects to 256 neurons, the second reduces to 104 neurons, and the final layer outputs to 62 classes corresponding to each possible character. The ReLU activation function is applied after each convolutional layer to introduce non-linearity by converting negative values to zero, while the hyperbolic tangent (tanh) function is used between fully connected layers to normalize outputs between -1 and 1. All of the EMNIST-based models described above were trained for 2 epochs, as the large size of the dataset allowed the system to achieve adequate accuracy within this limited training period. Due to the significantly larger number of character classes being trained, this system had a much longer setup and training time compared to the letter-only models. However, this was the computer vision system that was ultimately implemented for the EMNIST recognition in the MCP Server, as it more accurately accounts for capitalization and can distinguish between digits and letters.
+To account for uppercase letters, lowercase letters, and digits, a separate system was developed using the EMNIST ByClass dataset with 62 character classes. The architecture follows Model2 but with adjusted output dimensions. The first convolutional layer applies 32 filters with a 5 by 5 kernel and stride of 1, producing feature maps of dimension $(28-5)+1=24$, reduced to 12 by 12 through max pooling. A second convolutional layer expands to 64 channels, resulting in $(12-5)+1=8$ dimension feature maps, compressed to 4 by 4 through pooling. The 1024 outputs ($64 \times 4 \times 4$) pass through three fully connected layers: 256 neurons, then 104, and finally 62 classes. The ReLU activation function converts negative values to zero after each convolutional layer, while hyperbolic tangent (tanh) normalizes outputs between -1 and 1 between fully connected layers. All EMNIST-based models were trained for 2 epochs, as the large dataset allowed adequate accuracy quickly. This system had longer training time due to the 62 classes but was ultimately implemented in the MCP Server because it handles capitalization and distinguishes between digits and letters.
 
 The full EMNIST was broken into training and testing sets using its own built in attributes. This will be explained further in future drafts.
 
-Loss is the indicator of a systems assumption of the correct character. It is derived from the system’s perceived percentage likelihood that a given image may be a given character. As the system is trained, the loss changes with each image it processes. Ideally, loss should be 0 indicating that the system is operating with 100\% certainty that the image input is a specific character. Model3’s loss is seen below
+Loss measures how confident the system is in its predictions. It is derived from the system's perceived likelihood that a given image matches a given character. As the system trains, loss changes with each image processed. Ideally, loss should be 0, indicating 100\% certainty. Model3's loss is seen below
 
 There will be a graph for the loss of Model3 here, but this proves difficult to construct as there are so many data points. The program will be altered to get averages over a wider area before making this graph.
 
 As the graph indicates, in the first several hundred images processed, loss decreased drastically indicating rapid development by the system. However, in the final hundreds of images loss fluctuated around 0.3 and does not as consistently decrease. This indicates that the system may require substantially more training data to improve its accuracy further.
 
-For the preparation of images, processing first needs to be applied to each individual letter that needs to be read by the system to separate each of them from the larger image of text input. To do this, the first program sought to separate each individual image of a letter by identifying isolated blobs of white pixels within the image of text. The program would identify a pixel and try to iterate through the surrounding pixels to identify if they were also part of the letter. This, however, proved ineffective for a few reasons. First of all, the system picked up noise in the background, such as smudges on paper, and tried to label it as letters. However, that could be prevented by applying a Gaussian blur that smoothed the image before black and white thresholding converted the image to two colors. The real issue appeared with the letters "i" and "j." The dots on these letters were identified as separate letters by this method making it impossible to properly isolate the full "i" and it created an extra letter in the output. Simply looking for nearby images was not possible because often the dots of "i's" were significantly separated from the body of the letter. 
+For image preparation, each letter needs to be separated from the larger image of text. The first approach identified isolated blobs of white pixels by iterating through surrounding pixels. This proved ineffective for several reasons. The system picked up background noise like smudges and tried to label them as letters. A Gaussian blur, which smooths the image by averaging nearby pixels, could prevent this issue. The real problem appeared with "i" and "j." The dots on these letters were identified as separate characters, making proper isolation impossible. Looking for nearby images did not help because the dots were often significantly separated from the letter bodies. 
 
-Because of the flaws with this method, a separate program was prepared to read the complex. The program starts by converting the initial image into gray scale then using Opencv’s threshold function to convert the image to black and white. From here a black background was created for the image and any pixel that is not absolutely black was made white by iterating through the image. From here the image is iterated through by row to separate each horizontal line of text, which are stored as separate PNG files. Next, each PNG of a line of text is iterated through by each column of pixels. If there is a pixel in that column it is marked and when there are no longer any pixels that is marked as well. These sets of two columns are used to crop each separate each image from the original picture, not the grayed version. The resulting images tend to have unusual proportions and a tall height.
+Because of these flaws, a separate program was developed. The program converts the image to grayscale, then uses OpenCV's threshold function to convert it to black and white. Any pixel that is not absolutely black is made white. The image is iterated through by row to separate each horizontal line of text, stored as separate PNG files. Each line is then iterated through by column. If a column contains a pixel, it is marked. When columns no longer contain pixels, that is marked as well. These column boundaries are used to crop each character from the original image. The resulting images tend to have unusual proportions and tall heights.
 
-A separate Python module was made to process individual images of letters and to prepare them to be read by the computer vision system. This was applied iteratively to the results of the line reading function. From here, the characters were blurred using a Gaussian blur which smoothed the colors into transitions between black and white rather than just the two colors while also blurring out some background noise to produce a smoother overall picture. From here, a threshold was set that converted all pixels with a color greater than 100 on a 100 to 255 scale to black. Next, black pixels are converted to white and white pixels are converted to black to make the image white text on a black background. The images were converted into perfects squares by adding extra rows and columns to each side until the width and length were equal. This ensured that when the size of the images was decreased, the images would not be heavily compressed or altered. The images were then converted to 128 by 128 resulting in no apparent warping in any of the tests. Next, the images were iterated over to identify the highest, lowest, furthest left, and furthest right pixels. The image was reduced to just these pixels with two pixel padding before being padded back into a square before being further reduced once more into a 28 by 28-pixel square. To finish the image processing, each individual image was mirrored and rotated 90 degrees to match the image orientation provided by the EMNIST in their data set. The motivation behind the orientation of these images remains unclear. The computer vision system from here assigned the appropriate labels to the images. The labels are returned in order from the left to right side of the original image to give the final text output.
+A separate Python module processes individual letter images for the computer vision system. Characters are blurred using a Gaussian blur to smooth colors and reduce background noise. A threshold converts pixels with color greater than 100 (on a 0-255 scale) to black. Black and white pixels are then swapped to create white text on a black background. Images are padded into perfect squares to prevent warping during resizing, then converted to 128 by 128 pixels. The bounding box of the character is identified and the image is cropped with 2 pixel padding before being resized to 28 by 28 pixels. Each image is mirrored and rotated 90 degrees to match the EMNIST dataset orientation. The motivation behind this orientation remains unclear. Labels are returned left to right from the original image to produce the final text output.
 
 In addition to the EMNIST-based computer vision system, a separate system was developed using the CHoiCe (Characters of Historical Choice) dataset to demonstrate the expandability of the MCP architecture for handling alternative handwriting styles. The CHoiCe dataset is a significantly smaller collection of handwritten character images compared to the EMNIST, requiring a different approach to training. The same neural network architecture used for the EMNIST ByClass system was employed, utilizing 32 and 64 channel convolutional layers with identical pooling and fully connected layer structures outputting to 62 character classes. However, due to the limited size of the CHoiCe dataset, the training process required substantially more epochs to achieve reasonable accuracy.
 
@@ -118,9 +121,9 @@ As was previously shown in the example with figure1, the handwritten name input 
 The next section of the results will show how different text styles were successfully identified by the Model Context Protocol. This also does not exist yet but the MCP will be configured to return the name of the system that it used. 
 
 \section{Conclusion}
-In conclusion, this project demonstrates the potential of integrating multiple specialized computer vision systems into a single, adaptive AI framework for handwriting recognition. By redirecting input images to the most suitable model, the system effectively overcomes the limitations of single computer vision system strategies. This design not only enhances accuracy across diverse handwriting styles but also provides a foundation for expansion as new models are developed. The result is a flexible, scalable, and intelligent handwriting recognition system capable of evolving with future as more computer vision systems are added to it.
+This project demonstrates the potential of integrating multiple specialized computer vision systems into a single, adaptive AI framework for handwriting recognition. By redirecting input images to the most suitable model, the system overcomes the limitations of single computer vision system strategies. The design provides a foundation for expansion as new models are developed. The result is a flexible, scalable handwriting recognition system capable of evolving as more computer vision systems are added.
 
-A comparison of how each individual system compares to other computer vision systems that have already been released will also be included, along with a demonstration of how well different styles fare when input into unprepared systems versus a system built to handle diverse styles.
+Several improvements could enhance this system in future development. First, the cursive segmentation algorithm could be improved by implementing machine learning-based approaches that learn to identify character boundaries from training data rather than relying on simple column-based gap detection. Recurrent neural networks or transformer architectures could potentially learn the patterns of cursive connections and identify where one character ends and another begins. Second, ligature recognition could be implemented to handle common letter combinations that are written as connected units. Ligatures like "ff", "fi", "fl", and "th" appear frequently in both cursive and historical handwriting, where adjacent letters merge into single glyphs. Training the system to recognize these combined forms rather than attempting to segment them into individual characters could improve accuracy for cursive and historical texts. Third, the CHoiCe model accuracy could be improved by data augmentation techniques such as rotating, scaling, and adding noise to training images to artificially expand the small dataset. Despite the poor accuracy results from the CHoiCe system, this work demonstrates the importance of specialized character recognition for different handwriting styles. A general-purpose model trained only on modern handwriting cannot adequately handle historical scripts, and the MCP architecture allows these specialized models to coexist and be selected appropriately. Fourth, a confidence-based fallback system could be implemented where if one model returns low confidence scores, the system automatically tries alternative models and compares results. Fifth, post-processing with dictionary lookup could correct obvious spelling errors by comparing recognized text against known words and suggesting corrections. Sixth, the system could be expanded to handle non-Latin scripts by training additional models on datasets for Cyrillic, Arabic, Chinese, and other writing systems. Seventh, support for historical fonts with different letter forms could be added. Many historical documents use letter forms that differ significantly from modern writing, such as the long s (ſ) that resembles an "f", blackletter scripts with angular letterforms, or early printing typefaces with distinct character shapes. Training specialized models to recognize these historical letter forms would enable transcription of a wider range of archival documents. Finally, a web-based interface could make the system more accessible by allowing users to upload images directly through a browser rather than requiring local file paths.
 \bibliographystyle{acm}
 \bibliography{bibliography.bib}
 
